<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Yellow World</string>
    <string name="yellow_world">Желтый Мир</string>
    <string name="start_screen_picture">картинка стартовой заставки</string>
    <string name="Start">Играть</string>
    <string name="Hints">Подсказки</string>
    <string name="Past_the_game">Прошедшие игру</string>
    <string name="AssistanceToTheProject">Помощь проекту</string>
    <string name="Exit">Выход</string>

    <string name="chapter1">Глава 1: Лифт</string>
    <string name="chapter2">Глава 2: Желтый Мир</string>
    <string name="chapter3">Глава 3: Возвращение</string>
    <string name="back">Назад</string>
    <string name="game_worlds">Игровые Миры</string>
    <string name="Levels">Уровни:</string>

    <string-array name="nameLevels">
        <item>1. Вступление</item>
        <item>2. Находка</item>
        <item>3. Беседа</item>
    </string-array>



    <string name="intro_title">Вступление:</string>
    <string name="introduction" tools:ignore="TypographyEllipsis">
        Данная квестовая игра предназначена исключительно в развлекательных целях и создавалась только ради этого!
        \n Игра полностью бесплатна, но есть реклама, чтобы оплачивать хранилища для файлов игры.
        \n Надеюсь вы меня извините за нее.
        \n
        \n Вступление:
\n Представьте, что вы попали в мир, где нет людей!
\n Все вокруг остается прежнее, но нет ни единой души!
\n Представили?
\n Хотите попасть в такой мир?
\n Ничего сложного делать не надо, просто необходимо найти здание с лифтом и нажать определенную комбинацию чисел и вы уже там.
\n Данная городская легенда издавна ходит из уст в уста у жителей Японии, ибо оттуда пошла данная легенда.
\n Попробуй повторить это в нашей игре и ты поймешь, что не все так увлекательно и безопасно как ты думаешь.
\n Ты встретишь предательство, страх, ужас, поймешь что сейчас ты живешь в идеальном мире, но и ему тоже скоро придет конец...
\n
\n P.s.
\n Обязательно смотри видео и записывай важные моменты, ибо там есть подсказки!
</string>
    <string name="button_Im_ready">Я готов!</string>
    <string name="button_continue">Продолжить</string>


</resources>