<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".gamemenu.GameWorld">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/black"
            android:padding="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_worlds"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold|italic"
                android:layout_weight="0.8"
                />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:background="@drawable/button_stroke_red_press_yellow"
                android:padding="10dp"
                android:textAllCaps="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="10dp">


            <Button
                android:id="@+id/buttonChapter1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@drawable/button_stroke_red_press_yellow"
                android:drawableLeft="@drawable/iconmenu1"
                android:gravity="left|center_vertical"
                android:padding="20dp"
                android:text="@string/chapter1"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/buttonChapter2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="0.2"
                android:background="@drawable/button_stroke_red_press_yellow"
                android:drawableLeft="@drawable/iconmenu1"
                android:gravity="left|center_vertical"
                android:padding="20dp"
                android:text="@string/chapter2"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <Button
                android:id="@+id/buttonChapter3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="0.2"
                android:background="@drawable/button_stroke_red_press_yellow"
                android:drawableLeft="@drawable/iconmenu1"
                android:gravity="left|center_vertical"
                android:padding="20dp"
                android:text="@string/chapter3"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>