<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".gamemenu.Chapter1.Chapter1Level1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/intro_title"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_stroke_red_press_yellow"
                android:padding="10dp"
                android:text="@string/back"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/introduction"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold|italic"
                         />


                    <com.google.android.exoplayer2.ui.PlayerView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:id="@+id/player_view"
                        app:resize_mode="fit"
                        app:hide_on_touch="true"
                        app:show_timeout="5000"
                        app:rewind_increment="10000"
                        app:fastforward_increment="10000"
                        app:use_controller="true"
                        android:background="@color/black"
                        app:player_layout_id="@layout/exo_simple_player_view"
                        app:controller_layout_id="@layout/custom_controller">

                        <ProgressBar
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:id="@+id/progress_bar"
                            android:layout_gravity="center"
                            />

                    </com.google.android.exoplayer2.ui.PlayerView>

                    <Button
                        android:id="@+id/buttonContinue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_Im_ready"
                        android:padding="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/button_stroke_red_press_yellow"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold|italic"/>


                </LinearLayout>


            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>